crates/snapshot-tests/tests/snapshots/parser__bad_booleans__false_trailing.snap
---
source: snapshot-tests/tests/parser.rs
expression: error
---
error[Wanted]: expected newline, found an identifier at `foo`
  ┌─ false_trailing:1:12
  │
1 │ foo = false2
  │            ^ expected newline
