crates/snapshot-tests/tests/snapshots/parser__bad_booleans__leading_f.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[UnquotedString]: string values must be quoted, expected string literal at `foo`
  ┌─ leading_f:1:7
  │
1 │ foo = f2
  │       ^^ string is not quoted


error: string values must be quoted, expected string literal at `foo`
 --> leading_f:1:7
  |
1 | foo = f2
  |       ^^ string is not quoted
Error {
    kind: "UnquotedString",
    message: "string values must be quoted, expected string literal",
    span: 6..8,
    path: Some(
        "foo",
    ),
}
